src/App.css
 #root {
   background-color: black;
 }
 
 .test{
  width:max-content;
 }

 .field-div{
  width:100%;
  border: rgb(226, 214, 214) solid;
 }

 .field-component{
  width: 100%;
 }

 /* .field-container2 {
   background-image: url("http://localhost:3000/images/field.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 } */


 .head-pic {
   /* background-color: red; */
   margin: 0 auto;
   width: 100%;
   height: 400px;
 }

 section {
   width: 33.33%;
   margin: 0 auto;
   /* center horizontally */
 }

 .header-gradient {
  background: linear-gradient(to right, #b1ee6b, #28942b);
}

.header-title {
  font-size: 3.0rem;
  text-align: center;
  background: transparent;
}

@media (min-width: 800px) {
  .header-title {
    font-size: 3.7rem;
  }
}

.header-title img { height: 70px;}

.messi{
  order:3;
  width: 300px;
  height: 500px;
  margin-top: 150px;
  margin-left: -100px;
}

.players {
  order: 2;
  width: 600px;
  height: 700px;
  margin-top: 45px;
  margin-left: -230px;
}

.formations {
  flex: 1;
}
.formations-wrapper {
  top: 0;
  display: flex;
  flex-direction: row;
  /* align-items: center; */
}


@media (max-width: 992px) {
  .players {
    width: 50%;
    height: auto;
    margin-top: 0;
    margin-left: 0;
  }
}

@media (max-width: 768px) {
  .players {
    width: 70%;
  }
}

@media (max-width: 576px) {
  .players {
    width: 90%;
  }
}

